--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "simpleBookStore.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "db:initialize": "psql bookstore -f schema.sql"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/aaronev/simple-book-store#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "body-parser": "~1.15.1",
+    "pug": "~2.0.0",
+    "pg-promise": "^5.6.3"
   }
 }
