--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/aaronev/simple-book-store#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.15.2",
-    "body-parser": "~1.15.1",
-    "pug": "~2.0.0",
-    "pg-promise": "^5.6.3"
-  }
+    "pg-promise": "^5.6.3",
+    "pug": "~2.0.0"
+  },
+  "devDependencies": {}
 }
